syntax = "proto3";
package exchange;
option go_package = "exchangepb";

service ExchangeService {
    rpc CreateExchange(CreateExchangeReq) returns (CreateExchangeRes);
    rpc ReadExchange(ReadExchangeReq) returns (ReadExchangeRes);
    rpc UpdateExchange(UpdateExchangeReq) returns (UpdateExchangeRes);
    rpc DeleteExchange(DeleteExchangeReq) returns (DeleteExchangeRes);
    rpc ListExchanges(ListExchangeReq) returns (stream ListExchangeRes);
    rpc ListExchangesByUser(ListExchangesByUserReq) returns (stream ListExchangesByUserRes);
}

message Exchange {
    string id = 1;
    string selected_exchange = 2;
    string exchange_name = 3;
    string exchange_type = 4;
    string user_id = 5;
    string api_key = 6;
    string api_secret= 7;
}

message ExchangeAccountInfo {
    string account_number = 1;
    string status = 2;
    string currency = 3;
    string buying_power = 4;
    string cash = 5;
    string portfolio_value = 6;
    string equity = 7;
    string last_equity = 8;
    string long_market_value = 9;
    string short_market_value = 10;
    string initial_margin = 11;
}

message CreateExchangeReq {
    Exchange exchange = 1; 
}

message CreateExchangeRes {
    Exchange exchange = 1;
    ExchangeAccountInfo exchangeAccountInfo = 2;
}

message UpdateExchangeReq {
    Exchange exchange = 1;
}

message UpdateExchangeRes {
    Exchange exchange = 1;
}

message ReadExchangeReq {
    string id = 1;
}

message ReadExchangeRes {
    Exchange exchange = 1;
}

message DeleteExchangeReq {
    string id = 1;
}

message DeleteExchangeRes {
    bool success = 1;
}

message ListExchangeReq{}

message ListExchangeRes{
    Exchange exchange = 1;
}

message ListExchangesByUserReq {
    string user_id = 1;
}

message ListExchangesByUserRes {
    Exchange exchange = 1;
}